2013-03-10  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Release: 0.45 (tag v0.45)

2012-12-23  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Set locale.

	* testing.scm: ...here, via ‘setlocale’ before everything.

2012-11-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Add support for "make installcheck".

	* runtest.in (prefix): Don't set var if already in environment.
	* Makefile.am (installcheck-local): New target.

2012-04-20  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Release: 0.44 (tag v0.44)

2012-04-20  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Add support for "make check KEEPD=1".

	* Makefile.am (check-local): If ‘KEEPD’ is 1, don't kill the daemon.

2012-04-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[slog] Allow for pre-PostgreSQL 8.1 ‘pg-client-encoding’ rv.

	* types-table.scm (mgr) <verify client encoding is UTF8>:
	Accept "UNICODE" as well as "UTF-8".

2012-02-06  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Release: 0.43 (tag v0.43)

2012-02-06  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Use a funky table name to exercise ‘validate-def’ a bit.

	* types-table.scm (test-m2): Change table name to ‘abstr∀ctions-2’.

2012-02-06  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Add support for ‘make delete-cluster’.

	* Makefile.am (delete-cluster): New target.
	(clean-local): Don't depend on ‘kill-daemon’; instead,
	depend on ‘delete-cluster’ and remove rm(1) invocation.

2012-02-05  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Use a funky column name to exercise ‘validate-def’ a bit.

	* types-table.scm (test-m2): Change
	name of first column from ‘n’ to ‘∑╌’.

2012-02-05  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Set client encoding to UTF-8 explicitly for types/table tests.

	* types-table.scm (mgr try!): New proc.
	(mgr): Set client encoding to UTF-8; if not successful
	or if verification fails, exit failurefully.

2012-02-05  Thien-Thi Nguyen  <ttn@gnuvola.org>

	New (database postgres-qcons) proc: string-xrep

	* types-table.scm: Import SRFI 13, SRFI 14.